--- a/Coco/Base.lproj/Localizable.strings
+++ b/Coco/Base.lproj/Localizable.strings
@@ -6,6 +6,16 @@
   
 */
 
+// MARK: - Navigation & Screen Titles
+"screen.home" = "Home";
+"screen.my_trip" = "My Trip";
+"screen.profile" = "Profile";
+"screen.sign_in" = "Sign in";
+"screen.booking_detail" = "Booking Detail";
+"screen.checkout" = "Checkout";
+"screen.detail_my_trip" = "Detail My Trip";
+"screen.settings" = "Settings";
+
 // MARK: - Validation Messages
 "validation.participant.empty" = "Masukkan jumlah orang terlebih dahulu.";
 "validation.participant.invalid" = "Jumlah orang harus berupa angka yang valid.";
@@ -20,12 +30,77 @@
 "validation.email.invalid" = "Please enter a valid email address";
 "validation.name.required" = "Name is required";
 
-// MARK: - Form Labels
+"validation.alert.title" = "Tidak Valid";
+"validation.alert.ok" = "OK";
+
+// MARK: - Form Labels & Inputs
 "form.traveler_details.name" = "Name";
 "form.traveler_details.phone" = "Phone"; 
 "form.traveler_details.email" = "Email";
 "form.traveler_details.title" = "Traveler details";
 
-// MARK: - Common
+"form.select_dates" = "Select Dates";
+"form.number_participants" = "Number of participants";
+"form.select_time" = "Select Time";
+"form.select_participants" = "Select Participants";
+"form.available_slots" = "Available Slots: %d";
+
+// MARK: - Authentication
+"auth.email_address" = "Email Address";
+"auth.password" = "Password";
+"auth.sign_in" = "Sign in";
+"auth.enter_email" = "Enter your email address";
+"auth.enter_password" = "Enter your password";
+"auth.log_out" = "Log out";
+
+// MARK: - Trip & Booking
+"trip.pay_during_trip" = "Pay During Trip";
+"trip.person" = "person";
+"trip.status.completed" = "Completed";
+"trip.status.upcoming" = "Upcoming";
+
+"booking.date_booking" = "Date Booking";
+"booking.status" = "Status";
+"booking.person" = "Person";
+"booking.meeting_point" = "Meeting Point";
+"booking.completed" = "Booking Completed";
+
+// MARK: - Price & Payment
+"price.details" = "Price Details";
+"price.dates" = "Dates";
+"price.pax" = "Pax";
+"price.name" = "Name";
+"price.pay_during_trip" = "Pay during trip";
+"price.book_now" = "Book Now";
+
+// MARK: - Package & Activity
+"package.show_all" = "Show All";
+"package.show_less" = "Show Less";
+"package.free_cancellation" = "Free Cancellation";
+"package.schedule" = "Schedule";
+
+// MARK: - Search
+"search.title" = "Search";
+"search.last_search" = "Last Search";
+"search.popular_location" = "Popular Location";
+
+// MARK: - Common Actions & Labels
 "common.select_date" = "Select Date";
 "common.type_here" = "Type here...";
+"common.detail" = "Detail";
+"common.cancel" = "Cancel";
+"common.continue" = "Continue";
+"common.search" = "Search";
+"common.ok" = "OK";
+
+// MARK: - Numbers & Formatting
+"format.min_max_participants" = "Min.%d - Max.%d";
+"format.participant_range_person" = "Input total Pax... %d - %d Person(s)";
+"format.participant_min_person" = "Input total Pax... min %d Person(s)";
+"format.participant_max_person" = "Input total Pax... up to %d Person(s)";
+"format.participant_default" = "Input total Pax...";
+
+// MARK: - Placeholder Texts
+"placeholder.input_date_visit" = "Input Date Visit...";
+"placeholder.input_total_pax" = "Input total Pax...";
+"placeholder.type_here" = "Type here…";
